页面布局修改

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,5 +29,5 @@
       </div>
     </d-content>
   </ng-template>
-  <d-footer>footer</d-footer>
+  <!-- <d-footer>footer</d-footer> -->
 </d-layout>
