--- a/src/app/service-list/service-list.component.less
+++ b/src/app/service-list/service-list.component.less
@@ -1,10 +1,17 @@
 .title {
-    font-size: 16px;
-}
-.btn-group {
-    margin-top: 16px;
-    margin-bottom: 8px;
+  font-size: 16px;
+  margin-bottom: 20px;
+  align-items: center;
+  align-content: center;
+  display: flex;
+  .label {
+    flex-grow: 1;
+  }
+  .btn-group {
     d-button {
-        margin-right: 4px;
+      margin-right: 4px;
     }
+    min-width: 200px;
+    text-align: end;
+  }
 }
