--- a/src/app/config-list/modal/select-app/select-app.component.html
+++ b/src/app/config-list/modal/select-app/select-app.component.html
@@ -51,7 +51,9 @@
     </d-pagination>
   </div>
   <div class="footer">
-    <d-button bsStyle="danger" (click)="onConfirm()">确定</d-button>
+    <d-button bsStyle="danger" [disabled]="!selectId" (click)="onConfirm()"
+      >确定</d-button
+    >
     <d-button bsStyle="common" class="cse-mg-left-lg" (click)="onCancel()"
       >取消</d-button
     >
