--- a/src/app/config-list/modal/select-service/select-service.component.html
+++ b/src/app/config-list/modal/select-service/select-service.component.html
@@ -80,7 +80,12 @@
     </form>
   </div>
   <div class="footer">
-    <d-button bsStyle="danger" (click)="onConfirm()">确定</d-button>
+    <d-button
+      bsStyle="danger"
+      [disabled]="!selectService || !selectVersion"
+      (click)="onConfirm()"
+      >确定</d-button
+    >
     <d-button bsStyle="common" class="cse-mg-left-lg" (click)="onCancel()"
       >取消</d-button
     >
