--- a/src/app/config-list/pages/config-create/config-create.component.html
+++ b/src/app/config-list/pages/config-create/config-create.component.html
@@ -8,13 +8,22 @@
     </d-breadcrumb-item>
   </d-breadcrumb>
 
-  <form dForm [layout]="FormLayout.Horizontal" [labelSize]="'sm'">
-    <d-form-item>
+  <form
+    class="cse-mg-top-md"
+    dForm
+    ngForm
+    [formGroup]="formGroup"
+    #form="dValidateRules"
+    [dValidateRules]="formRules.rule"
+    [layout]="FormLayout.Horizontal"
+    [labelSize]="'sm'"
+  >
+    <d-form-item *ngIf="configType">
       <d-form-label [required]="false">配置类型</d-form-label>
       <d-form-control>{{ configType }}</d-form-control>
     </d-form-item>
     <d-form-item *ngIf="configType === 'app' && type === 'create'">
-      <d-form-label [required]="false">应用</d-form-label>
+      <d-form-label [required]="true">应用</d-form-label>
       <d-form-control>
         <span *ngIf="appId">{{ appId }}</span>
         <i
@@ -29,7 +38,7 @@
     </d-form-item>
 
     <d-form-item *ngIf="configType === 'service' && type === 'create'">
-      <d-form-label [required]="false">微服务</d-form-label>
+      <d-form-label [required]="true">微服务</d-form-label>
       <d-form-control>
         <span *ngIf="serviceId">{{ serviceId }}</span>
         <i
@@ -56,8 +65,8 @@
             dTextInput
             class="w-300"
             placeholder="请输入配置项"
-            [(ngModel)]="configName"
-            [ngModelOptions]="{ standalone: true }"
+            name="configName"
+            formControlName="configName"
             [dValidateRules]="[
               { required: true },
               { whitespace: true },
@@ -74,7 +83,7 @@
           />
         </ng-container>
         <ng-template #elseTemplate>
-          <span>{{ configName }}</span>
+          <span>{{ formGroup.controls.configName.value }}</span>
         </ng-template>
       </d-form-control>
     </d-form-item>
@@ -154,9 +163,10 @@
         <ngx-monaco-editor
           #monacoEditor
           [options]="editorOptions"
-          [(ngModel)]="code"
-          [ngModelOptions]="{ standalone: true }"
-          style="height: 400px"
+          style="height: 400px; width: 80%"
+          name="code"
+          formControlName="code"
+          [dValidateRules]="formRules.codeRules"
         ></ngx-monaco-editor>
       </d-form-control>
     </d-form-item>
@@ -167,12 +177,18 @@
         circled="true"
         style="margin-right: 4px"
         (click)="onSubmit()"
-        dFormSubmit
-        >Submit</d-button
+        [disabled]="
+          !!form.errorMessage ||
+          (type === 'create' && configType !== 'custom' && !serviceId && !appId)
+        "
+        dTooltip
+        [content]="form.errorMessage"
       >
-      <d-button bsStyle="common" circled="true" (click)="cancel()"
-        >Cancel</d-button
-      >
+        Submit
+      </d-button>
+      <d-button bsStyle="common" circled="true" (click)="cancel()">
+        Cancel
+      </d-button>
     </d-form-operation>
   </form>
 </div>
