--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <d-layout>
   <d-header>
     <div class="logo">
-      <span class="text">Local-CSE</span>
+      <img src="https://www.apache.org/img/servicecomb.png" alt="" />
     </div>
   </d-header>
   <ng-container *ngIf="showLeftMenu; then thenTemplate; else elseTemplate">
@@ -29,5 +29,4 @@
       </div>
     </d-content>
   </ng-template>
-  <!-- <d-footer>footer</d-footer> -->
 </d-layout>
