--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -29,11 +29,15 @@ d-header {
     left: 0;
     margin-left: 20px;
     height: 40px;
-    width: 120px;
+    width: 300px;
     color: @devui-light-text;
     font-size: @devui-font-size-icon;
     line-height: 40px;
-
+    img {
+      position: absolute;
+      top: -8px;
+      left: -95px;
+    }
     .logo-devui {
       margin-top: 7px;
     }
