--- a/src/app/service-detail/service-detail.component.html
+++ b/src/app/service-detail/service-detail.component.html
@@ -55,8 +55,7 @@
           <d-form-item>
             <d-form-label> 框架 </d-form-label>
             <d-form-control class="form-control-width">
-              {{ serviceData?.framework?.name }}&nbsp;&nbsp;
-              {{ "    " + serviceData?.framework?.version }}
+              {{ serviceData?.framework?.version }}
             </d-form-control>
           </d-form-item>
         </div>
@@ -80,23 +79,6 @@
             </d-form-control>
           </d-form-item>
         </div>
-
-        <div class="u-1-2">
-          <d-form-item>
-            <d-form-label> 标签 </d-form-label>
-            <d-form-control class="form-control-width">
-              <d-tag
-                *ngFor="let item of tags"
-                [tag]="item"
-                class="cse-mg-right-xs"
-              ></d-tag>
-              <d-button [bsStyle]="'text-dark'" (click)="onTags()">
-                标签管理
-              </d-button>
-            </d-form-control>
-          </d-form-item>
-        </div>
-
         <div class="u-1-2">
           <d-form-item>
             <d-form-label> 创建时间 </d-form-label>
